2017-03-28  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldraw3d/HandlingListener.java (startDragParts): added code to manage part dragging
	* src/bricksnspace/ldraw3d/LDrawGLDisplay.java (mouseDragged): added code to manage part dragging
	* src/bricksnspace/ldraw3d/PartQueryable.java: moved to LDrawLib
	* src/bricksnspace/ldraw3d/ConnGrid.java: moved to LDrawLib
	* src/bricksnspace/ldraw3d/ConnectionHandler.java: moved to LDrawLib

2017-03-24  Mario Pascucci  <mpascucci@gmail.com>

	* src/bricksnspace/ldraw3d/LDrawGLDisplay.java (mouseDragged): added code to handle mouse parts drag

2016-10-26  Mario Pascucci  <mpascucci@gmail.com>

	* LDrawGLDisplay.java (LDrawGLDisplay): on error report GL level in message
	(renderScene): added accumulation buffer clear
	(getStaticImage): better image rendering, with antialias
	code reorganization to generate better static image woth antialias

2016-10-07  Mario Pascucci  <mpascucci@gmail.com>

	* LDrawGLDisplay.java (getStaticImage): Added off-screen image generator

2015-08-27  Mario Pascucci  <mpascucci@gmail.com>

	* ConnectionHandler.java (resetTarget): added to clear last connection target for deleted parts

2015-06-12  Mario Pascucci  <mpascucci@gmail.com>

	* ConnectionHandler.java (getConnectionPoint): bugfix, no more weird/wrong orientation of part 
	    when moved between parts with different orientation

2015-05-14  Mario Pascucci  <mpascucci@gmail.com>

	* LDrawGLDisplay.java (render): optimized render loop with clear if/for scheme

2015-05-12  Mario Pascucci  <mpascucci@gmail.com>

	* LDrawGLDisplay.java (render): Added code to dim and highlight parts
	* LDRenderedPart.java (generatePartVBOs): always computes bounding boxes

2015-04-14  Mario Pascucci  <mpascucci@gmail.com>

	* DrawHelpers.java (getBezier): added control for constraint point too near

2015-03-24  Mario Pascucci  <mpascucci@gmail.com>

	* ConnectionHandler.java (addConnections): unified call to add connection point to model database