@@ -1,1 +1,3 @@
 /bin
+/gluegen-javadoc.zip
+/jogl-javadoc.zip
